src/objects/Client_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Client Summary</relationshipLabel>
        <relationshipName>Client_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FORM_TYPE__c</fullName>
        <label>FORM_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>Baseline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DS DATA Page</label>
        <referenceTo>DS_DATA__c</referenceTo>
        <relationshipLabel>Client Summary</relationshipLabel>
        <relationshipName>Client_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REQUIRED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REQUIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <label>SECTION</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <picklist>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Page__c</columns>
        <columns>FORM_TYPE__c</columns>
        <columns>STATUS__c</columns>
        <columns>SECTION__c</columns>
        <columns>REQUIRED__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>assessments</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Page__c</columns>
        <columns>FORM_TYPE__c</columns>
        <columns>STATUS__c</columns>
        <columns>SECTION__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FORM_TYPE__c</field>
            <operation>equals</operation>
            <value>Assessment</value>
        </filters>
        <filters>
            <field>Page__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>assessments</label>
    </listViews>
    <listViews>
        <fullName>test_cbcl</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Page__c</columns>
        <columns>FORM_TYPE__c</columns>
        <columns>STATUS__c</columns>
        <columns>SECTION__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client__c</field>
            <operation>greaterOrEqual</operation>
            <value>6758-00-00226</value>
        </filters>
        <label>test cbcl</label>
    </listViews>
    <nameField>
        <displayFormat>summary-{000000}</displayFormat>
        <label>Client Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>